<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/utils"
          android:showAsAction="always"
          android:title="@string/menu_item_utilities"
          android:actionLayout="@layout/menu_item_select_store"
          android:actionViewClass="com.thebedesseegroup.sales.customview.UtilitiesSpinner"/>

    <item android:id="@+id/select_store"
          android:showAsAction="always"
          android:title="@string/menu_item_select_store"
          android:actionLayout="@layout/menu_item_button"
          android:actionViewClass="android.widget.Button"/>

    <item android:id="@+id/shopping_cart"
          android:actionLayout="@layout/menu_item_button"
          android:actionViewClass="android.widget.Button"
          android:title="@string/view_shopping_cart"
          android:showAsAction="always" />

    <item android:id="@+id/daily_update"
          android:title="Daily Update"
          android:showAsAction="never" />

    <item android:id="@+id/past_order"
          android:title="Order History"
          android:showAsAction="never" />

    <item android:id="@+id/exit"
          android:icon="@drawable/ic_action_person"
          android:title="Exit App"
          android:showAsAction="never" />

    <item android:id="@+id/version"
          android:icon="@drawable/ic_action_person"
          android:title="vXXX"
          android:showAsAction="never" />
</menu>